--- a/Titanic-Machine-Learning-from-Disaster.ipynb
+++ b/Titanic-Machine-Learning-from-Disaster.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a402bf39",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "21bbb43c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "09075d7f",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "31823b8c",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "c6616879",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "31db3376",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "289fe9c9",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "944dbd9f",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "09797587",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "f1e6c6fa",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "Name: Sex, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "f5a8e401",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "Name: Pclass, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "5ce6e152",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "(0.42, 80.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "31f843e9",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        "male      468  109"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,12 +679,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "a7b39af9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can see that more famale were survived than male. But we have to visualize that"
+    "###"
    ]
   },
   {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "64dc9748",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "3         372  119"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "c4c32ac4",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "d3088505",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "c1d2c282",
    "metadata": {},
    "outputs": [
@@ -829,7 +829,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "bf373f60",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "28.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "1b33e2e3",
    "metadata": {},
    "outputs": [],
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "id": "46099fe3",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "687"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "id": "b3ff29d4",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "id": "54972246",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "(891, 11)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "id": "a6dfcb87",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "2"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 40,
    "id": "18178c0d",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "id": "eb6fd8ac",
    "metadata": {},
    "outputs": [],
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 42,
    "id": "0cce1d3f",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "id": "cb6718d8",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,9 +1051,311 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c3b4827",
+   "metadata": {},
+   "source": [
+    "### Turn into numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "57255da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, content in data_csv.items():\n",
+    "    if pd.api.types.is_object_dtype(content):\n",
+    "        data_csv[label] = content.astype(\"category\").cat.as_ordered()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "045073df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype   \n",
+      "---  ------       --------------  -----   \n",
+      " 0   PassengerId  891 non-null    int64   \n",
+      " 1   Survived     891 non-null    int64   \n",
+      " 2   Pclass       891 non-null    int64   \n",
+      " 3   Name         891 non-null    category\n",
+      " 4   Sex          891 non-null    category\n",
+      " 5   Age          891 non-null    float64 \n",
+      " 6   SibSp        891 non-null    int64   \n",
+      " 7   Parch        891 non-null    int64   \n",
+      " 8   Ticket       891 non-null    category\n",
+      " 9   Fare         891 non-null    float64 \n",
+      " 10  Embarked     891 non-null    category\n",
+      "dtypes: category(4), float64(2), int64(5)\n",
+      "memory usage: 115.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_csv.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "eb28c3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data_csv['Name'] = data_csv['Name'].cat.codes\n",
+    "#data_csv['Sex'] = data_csv['Sex'].cat.codes\n",
+    "#data_csv['Ticket'] = data_csv['Ticket'].cat.codes\n",
+    "data_csv['Embarked'] = data_csv['Embarked'].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3df8c166",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    int16  \n",
+      " 4   Sex          891 non-null    int8   \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    int16  \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Embarked     891 non-null    int8   \n",
+      "dtypes: float64(2), int16(2), int64(5), int8(2)\n",
+      "memory usage: 54.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_csv.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "91827122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv = pd.read_csv(\"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2f0c85f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId     0\n",
+       "Pclass          0\n",
+       "Name            0\n",
+       "Sex             0\n",
+       "Age            86\n",
+       "SibSp           0\n",
+       "Parch           0\n",
+       "Ticket          0\n",
+       "Fare            1\n",
+       "Embarked        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "bb1bfe9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv = test_csv.drop(columns='Cabin')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d7bab687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv['Fare'] = test_csv['Fare'].fillna(test_csv['Fare'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "12e510b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv['Age'].fillna(test_csv['Age'].median(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "db0935f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId    0\n",
+       "Pclass         0\n",
+       "Name           0\n",
+       "Sex            0\n",
+       "Age            0\n",
+       "SibSp          0\n",
+       "Parch          0\n",
+       "Ticket         0\n",
+       "Fare           0\n",
+       "Embarked       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "26697f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, content in test_csv.items():\n",
+    "    if pd.api.types.is_object_dtype(content):\n",
+    "        test_csv[label] = content.astype(\"category\").cat.as_ordered()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "8a3b5e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv['Name'] = test_csv['Name'].cat.codes\n",
+    "test_csv['Sex'] = test_csv['Sex'].cat.codes\n",
+    "test_csv['Ticket'] = test_csv['Ticket'].cat.codes\n",
+    "test_csv['Embarked'] = test_csv['Embarked'].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "6d82c472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
+    "np.random.seed(42)\n",
+    "X = data_csv.drop('Survived', axis = 1)\n",
+    "y = data_csv['Survived']\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size = 0.2)\n",
+    "clf = RandomForestClassifier(n_estimators=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "476a549c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8324022346368715"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train, y_train)\n",
+    "clf.score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "50381ed6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8324022346368715"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "clf2 = ExtraTreesClassifier(n_estimators=2000)\n",
+    "clf2.fit(X_train, y_train)\n",
+    "clf2.score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "3768d15b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = clf2.predict(test_csv)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c063ca11",
+   "id": "8992b840",
    "metadata": {},
    "outputs": [],
    "source": []
